References spacing repaired

--- a/public/scss/app/sections/references.scss
+++ b/public/scss/app/sections/references.scss
@@ -3,10 +3,8 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: flex-start;
-    @include media($references-item-breakpoint){
-        @include linear-interpolation-chain(padding-bottom, $references-item-spacings-above);
-        @include linear-interpolation-chain(padding-top, $references-item-spacings-above);
-    }
+    @include linear-interpolation-chain(padding-bottom, $references-item-spacings);
+    @include linear-interpolation-chain(padding-top, $references-item-spacings);
 }
 
 .references__item{
