--- a/public/scss/app/variables.scss
+++ b/public/scss/app/variables.scss
@@ -89,6 +89,6 @@ $form-input-breakpoint: m;
 //!form
 
 //references
-$references-item-spacings-above: (xl: 100, l: 60, m:60);
+$references-item-spacings: (xl: 50, s:0);
 //!references
 
